--- a/newsletter-signup-form/style.css
+++ b/newsletter-signup-form/style.css
@@ -126,3 +126,100 @@
         min-width: 318px;
     }
 }
+
+.success-modal {
+    padding: 0;
+    margin-inline: auto;
+    border: none;
+    border-radius: 2.25rem;
+    background-color: var(--clr-white);
+    max-width: 504px;
+    align-self: center;
+    opacity: 1;
+    transform: scale(1);
+    transition: opacity 300ms, transform 300ms;
+    
+    @starting-style {
+        opacity: 0;
+        transform: scale(0.8);
+    }
+
+    @media (max-width: 40rem) {
+        min-height: 100vh;
+        min-height: 100dvh;
+        margin: 0;
+        border-radius: 0;
+        max-width: none;
+    }
+
+    &::backdrop{
+        background-color: rgba(0, 0, 0, 0.6);
+        opacity: 1;
+        transition: opacity 300ms;
+        @starting-style {
+        opacity: 0;
+    }
+    }
+
+    & .modal-layout{
+        padding: 48px 64px 64px;
+
+        @media (max-width: 40rem) {
+        min-height: 100vh;
+        min-height: 100dvh;
+        padding-inline: 24px;
+        padding-bottom: 40px;
+        display: flex;
+        flex-direction: column;
+    }
+
+        & .modal-content{
+
+            @media (max-width: 40rem) {
+                padding-top: 150px;
+                flex-grow: 1;
+            }
+
+            & .success-icon{
+                width: fit-content;
+                margin-bottom: 40px;
+            }
+
+            & .modal-title{
+                font-size: var(--fs-56);
+                font-weight: var(--fw-bold);
+                line-height: 1;
+                color: var(--clr-blue-700);
+                margin-bottom: 24px;
+
+                 @media (max-width: 40rem) {
+                font-size: var(--fs-40);
+                }
+                
+            }
+
+            & .modal-description{
+                font-size: var(--fs-16);
+                margin-bottom: 40px;
+            }
+        }
+
+        & .modal-button{
+            cursor: pointer;
+            width: 100%;
+            display: block;
+            border: none;
+            background-color: var(--clr-blue-800);
+            border-radius: 8px;
+            font-weight: var(--fw-bold);
+            color: var(--clr-white);
+            padding-block: 18px 14px;
+
+            &:hover {
+                background: #FF6A3A;
+                background: linear-gradient(180deg, rgba(255, 106, 58, 1) 0%, rgba(255, 82, 123, 1) 70%);
+                box-shadow: 0px 15px 30px rgba(255, 82, 123, 0.5);
+            }
+        }
+    }
+}
